# omi-canvas

./: AGENTS.md  Enhanced CLI with Tree Command Integration.md  README.md  SKILLS.md  omi-canvas.cabal
app/: Main.hi  Main.hs
archive/: .gitignore  User_Guide.md
archive/app/: Main.hs
archive/app2/: Main.hs
archive/polyform_c_project/: Makefile  README.md  polyform-cli
archive/scripts/: thin-slice-demo.sh
archive/src/: GenerateGraph.hs  Stream.hs
archive/test/: ConvergenceSpec.hs  GoldenSpec.hs  InstructionStreamGoldenSpec.hs  NetworkAuthoritySpec.hs  NetworkFuzzSpec.hs  NetworkStateSpec.hs  NormalizationSpec.hs  PropertySpec.hs  ReconcileErrorGoldenSpec.hs  ReconcileSpec.hs  RoutingBadSpec.hs  RoutingErrorGoldenSpec.hs  (+6 more)
dev-docs/: 00-PROJECT-OVERVIEW.md  01-SNAPSHOT-PROTOCOL.md  02-ULP-LEDGER.md  03-MNEMONIC-MANIFOLD.md  04-RUNTIME-NETWORK.md  05-CANVAS-DESKTOP.md  06-APP-ENTRYPOINTS.md  07-ALGORITHMIC-CLOCK-AND-ORACLE.md  08-TEST-SUITE.md  09-FILE-INDEX.md  10-DEPENDENCY-MAP.md  README.md
src/: AlgorithmicClock.hs  GenerateFolderGraph.hs  oracle.hs
test/: ConvergenceSimSpec.hs  HaltGoldenSpec.hs  InstructionGoldenSpec.hs  NetworkBadSpec.hs  NetworkDigestGoldenSpec.hs  NetworkEpochSpec.hs  ReplaySpec.hs  SchedulerSpec.hs  SeamProducerSpec.hs  Spec.hs  StorageFuzzSpec.hs  TestMdExtract.hs  TestMnemonicManifold.hs  UnionLawSpec.hs  UniverseSpec.hs  replay-compare.sh  replay-hs.sh  replay-js.mjs  replay-suite.sh  reverse-vector-check.sh  sig-suite.sh  sign-message.mjs  signature-js-golden.mjs  vector-check.sh  vector-validate.mjs  verify-signature.mjs
(+167 files in other folders)
